added off-canvas nav

--- a/_posts/15-07-2014-pisto.md
+++ b/_posts/15-07-2014-pisto.md
@@ -1,8 +1,9 @@
 ---
 title: Pisto
 layout: post
+body: archive-page
 description: The Spanish version of ratatouille.
 prep: 5-10 minutes
 cook: 40 minutes
-categories: main-dish
+categories: Meals
 ---
