Updated mispelling on ingredients

--- a/_posts/2014-07-15-pisto.md
+++ b/_posts/2014-07-15-pisto.md
@@ -8,7 +8,7 @@ cook: 40 minutes
 categories: Meals
 ---
 
-## Indgredients
+## Ingredients
 - 2 small zucchini sliced thin
 - 2 small yellow squash sliced thin
 - 1 14.5oz. can of diced tomatoes
