--- a/_posts/2014-07-26-chili.md
+++ b/_posts/2014-07-26-chili.md
@@ -8,7 +8,7 @@ cook: 2 hours
 categories: soups
 ---
 
-## Indgredients
+## Ingredients
 - 2 lbs ground beef
 - 1 28oz. can of crushed tomatoes
 - 1 yellow onion diced small
