--- a/src/recipes/2015-08-04-barbacoa.md
+++ b/src/recipes/2015-08-04-barbacoa.md
@@ -4,6 +4,7 @@ body: archive-page
 description: Tender slow-cooked beef with lots of spices—great for tacos, tortas, or burritos.	
 prep: 15 minutes
 cook: 10 Hours
+illo: barbacoa-illo-web.png
 ingredients:
   - 3 lbs. Bottom round beef roast
   - 4 dried red chillies (Guajillo, New Mexico, etc.)
