Updated todo list

--- a/src/recipes/2014-07-15-pisto.md
+++ b/src/recipes/2014-07-15-pisto.md
@@ -1,4 +1,5 @@
 ---
+date: 2014-07-15
 title: Pisto
 description: The Spanish version of ratatouille—this dish is simple and delicious. It's a classic in our house.
 prep: 5-10 minutes
@@ -17,7 +18,6 @@ ingredients:
   - 3 TBspn olive oil
   - Salt and _LOTS_ of black pepper
 tags:
-  - recipes
   - vegetarian
 ---
 ## Method
