--- a/src/recipes/2014-07-26-chili.md
+++ b/src/recipes/2014-07-26-chili.md
@@ -1,4 +1,5 @@
 ---
+date: 2014-07-26
 title: Chili
 body: archive-page
 description: This is my favorite chili recipe. I like to experiment with different types of beans and I always add a bottle of good, strong American IPA for a great flavor. 
@@ -23,7 +24,6 @@ ingredients:
   - 1/2 Tspn cayenne pepper (more if you like it spicy)
 tags:
   - soups
-  - recipes
 ---
 ## Method
 1. In a large soup pot or dutch oven brown the ground beef. Work in batches if necessary. Once all of the meat is browned, remove from the pot and set aside.
