--- a/src/recipes/2015-08-04-barbacoa.md
+++ b/src/recipes/2015-08-04-barbacoa.md
@@ -1,4 +1,5 @@
 ---
+date: 2015-08-04
 title: Barbacoa
 body: archive-page
 description: Tender slow-cooked beef with lots of spices—great for tacos, tortas, or burritos.	
@@ -19,7 +20,6 @@ ingredients:
   - 1 TBspn. Ground Cumin
   - Salt & Pepper
 tags:
-  - recipes
   - slowcooker
 ---
 ## Method
