--- a/src/recipes/2019-07-03-mapo-ragu.md
+++ b/src/recipes/2019-07-03-mapo-ragu.md
@@ -1,4 +1,5 @@
 ---
+date: 2019-07-03
 title: Mapo Ragù
 description: This is adaptation of a NY Times recipe from Sam Sifton which is in turn an adaptation of a recipe by Tien Ho and David Chang from their restaurant Momofuku Ssam Bar
 prep: 20 minutes
@@ -17,7 +18,6 @@ ingredients:
   - 2-4 tablespoons neutral oil (like canola)
   - Jasmine rice for serving
 tags:
-  - recipes
   - asian
 ---
 ## About
